Remove delete method
