# example-bi-directional-provider-dotnet/Controllers/ProductController.cs
@@ -41,18 +41,5 @@ namespace Provider.Controllers
             return product;
         }
 
-        [HttpDelete("{int:id}")]
-        [ProducesResponseType(StatusCodes.Status204NoContent)]
-        public ActionResult DeleteProducts(int id)
-        {
-            var product = products.FirstOrDefault(product => product.id == id);
-
-            if(product != null)
-            {
-                products.Remove(product);
-            }
-
-            return new NoContentResult();
-        }
     }
 }
